src/components/Footer/Footer.module.css
.footer {
  background-color: var(--primary-background-color);
}

.heading {
  background-color: var(--secondary-background-color);
  color: var(--light-text-color);
  font-family: var(--decoraction-font);
  font-size: 1.25rem;
  font-weight: 500;
  padding: 20px;
  text-align: center;
}

.contact {
  font-size: 16px;
  padding: 32px 24px;
}
.contactHeading {
  font-family: var(--decoraction-font);
  font-size: 1.9375rem;
}

.contactMail {
  color: var(--brand-text-color);
  cursor: pointer;
  margin-top: 32px;
  margin-bottom: 59px;
  transition: 500ms;
}

.contactMailAdress {
  font-weight: 600;
  font-size: 1.25rem;
  color: var(--brand-text-color);
}

.contactMailIcon {
  display: none;
  fill: var(--dark-brand-color);
}

.contactMail:hover a,
.contactMail:focus a {
  color: var(--light-brand-color);
}

.contactMail:hover svg,
.contactMail:focus svg {
  fill: var(--light-brand-color);
}

.adressHeading {
  font-size: 1.25rem;
  font-weight: 700;
}

.adressText {
  margin-top: 12px;
  font-size: 1.25rem;
  font-weight: 500;
}

.adressLine {
  margin-top: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid #1d1d1d;
}

.map {
  border-radius: 12px;
  margin-top: 64px;
  width: 100%;
  height: 233px;
}

.logo {
  width: 55%;
  margin-top: 36px;
}

.socialList {
  display: flex;
  margin-top: 32px;
  gap: 32px;
}
.socialListItem {
  cursor: pointer;
}

.socialListItemIcon {
  width: 30px;
  height: 30px;
  fill: var(--dark-brand-color);
}

.socialListItemIcon:hover {
  fill: var(--light-brand-color);
}

.iconYT {
  width: 39px;
}

.statuteContainer {
  margin-top: 48px;
}

.statuteList {
  display: flex;
  gap: 20px;
  cursor: pointer;
  text-align: center;
}

.statuteListItem a {
  list-style: none;
  color: var(--dark-text-color);
}

.statuteListItem:hover a {
  color: var(--light-brand-color);
}

.allRightsParagraf {
  padding-top: 32px;
}

@media screen and (min-width: 754px) {
  .contact {
    padding: 32px 40px;
  }

  .contactHeading {
    font-size: 2.4375rem;
  }

  .contactMail {
    font-size: 1.3rem;
    margin-top: 16px;
    margin-bottom: 39px;
  }

  .contactMailAdress {
    display: flex;
    align-items: center;
  }

  .contactMailIcon {
    width: 32px;
    height: 32px;
    display: block;
    margin-right: 12px;
  }

  .adressContainer {
    display: grid;
    grid-template-areas: 'adress map';
  }

  .adress {
    font-size: 16px;
    max-width: 237px;
    display: inline;
    grid-area: adress;
  }

  .adressHeading {
    font-size: 1rem;
  }

  .adressText {
    font-size: 1rem;
  }

  .adressLine {
    margin-top: 33px;
    margin-bottom: 19px;
  }

  .map {
    float: right;
    margin-top: 0;
    min-width: 367px;
    height: 310px;
    grid-area: map;
  }

  .logo {
    margin-top: 41px;
    width: 25%;
  }

  .statuteContainer {
    display: flex;
    justify-content: space-between;
    margin-top: 28px;
  }
}

.statuteList {
  font-size: inherit;
  margin-top: 0;
}

.allRightsParagraf {
  font-size: inherit;
  margin-top: 0;
  padding-top: 0;
}

@media screen and (min-width: 1280px) {
  .contact {
    font-size: 16px;
    padding: 80px;
  }

  .contactHeading {
    font-size: 3.0625rem;
  }

  .contactMail {
    margin-top: 11.5px;
    margin-bottom: 44.5px;
  }

  .contactMailAdress {
    font-size: 1.75rem;
    font-weight: 600;
  }

  .contactMailIcon {
    width: 40px;
    height: 40px;
  }

  .adress {
    display: grid;
    max-width: none;
    grid-template-rows: 42px;
    grid-template-areas:
      'adressHeadingFundation aadressLine adressHeadingConference '
      'adresTextFundation aadressLine adressTextConference';
  }
  .adressContainer {
    max-height: 129px;
  }

  .adressHeading {
    font-size: 1rem;
  }

  .adressHeadingFundation {
    grid-area: adressHeadingFundation;
  }

  .adressHeadingConference {
    grid-area: adressHeadingConference;
  }

  .adressText {
    margin-top: 0;
    font-size: 1rem;
  }

  .adressTextFundation {
    grid-area: adresTextFundation;
  }

  .adressTextConference {
    grid-area: adressTextConference;
  }

  .adressLine {
    position: relative;
    grid-area: aadressLine;
    transform: rotate(90deg);
    margin-top: 0;
    margin-bottom: 0;
    width: 140px;
    top: 70px;
  }

  .map {
    min-width: 586px;
    height: 386px;
    position: relative;
    bottom: 180px;
  }

  .logo {
    margin-top: 40px;
    width: 13%;
  }

  .socialList {
    margin-top: 28px;
  }
}

